# jaxpp

./: .buildinfo  .gitmodules  README.md  genindex.html  index.html  installation.html  jaxpp.html  modules.html  objects.inv  pyproject.toml  readme.html  run_multi_process.sh  search.html  searchindex.js  simple_dense_model.py  usage.html
_sources/: index.rst.txt  installation.rst.txt  jaxpp.rst.txt  modules.rst.txt  usage.rst.txt
examples/: basic.py  mpmd_reshard.py  pp_vs_no_pp_gpt2_pp_tp_dp.py  run_multi_process.sh  simple_dense_model.py  tiny_gpt2_jaxpp_vs_spmd_dp.py
scripts/: local_mc.sh  run_tests.sh  setup-env.sh  test_jax_versions.sh
src/custom_kernels/: mori_demo.py  xrun_mori_demo.sh
src/jaxpp/: __init__.py  api.py  array.py  core.py  dime2.py  dispatch_comm.py  distributed_utils.py  dlpack.py  env_vars.py  jax_primitives.py  licm.py  mesh.py  types.py  utils.py
tests/: test_dime2.py  test_dlpack.py  test_mpmd_array.py  test_mpmd_mesh.py  test_reshard_utils.py
tests/functional_testing/: test_dropout_enabled.py  test_passthrough_vars.py
